# StratifyOS-mbedtls

./: .gitignore  CMakeLists.txt  README.md  StratifyOS-mbedtls.cmake  arm.cmake  bootstrap.cmake  link.cmake  link_config.c  link_config.h  mbedtls_api.c  mbedtls_api.h  mbedtls_crypt_api.c  net_sockets.c  sos_config.c  sos_config.h  sources.cmake  stratify-mbed-tls.cmake
config/mbedtls/: config.h
